src/uing/lib_ui/lib_ui.cr


    fun init = uiInit(options : Pointer(InitOptions)) : Pointer(LibC::Char)
    fun uninit = uiUninit
    fun free_init_error = uiFreeInitError(err : Pointer(LibC::Char))
    fun main = uiMain
    fun main_steps = uiMainSteps
    fun main_step = uiMainStep(wait : Bool) : Bool
    fun quit = uiQuit
    fun queue_main = uiQueueMain(f : (Pointer(Void) -> Void), data : Pointer(Void))
    fun timer = uiTimer(milliseconds : LibC::Int, f : (Pointer(Void) -> LibC::Int), data : Pointer(Void))
    fun on_should_quit = uiOnShouldQuit(f : (Pointer(Void) -> Bool), data : Pointer(Void))
    fun free_text = uiFreeText(text : Pointer(LibC::Char))
    # Control is a struct
    fun control_destroy = uiControlDestroy(c : Pointer(Control))
    fun control_handle = uiControlHandle(c : Pointer(Control)) : Pointer(Void)
    fun control_parent = uiControlParent(c : Pointer(Control)) : Pointer(Control)
    fun control_set_parent = uiControlSetParent(c : Pointer(Control), parent : Pointer(Control))
    fun control_toplevel = uiControlToplevel(c : Pointer(Control)) : Bool
    fun control_visible = uiControlVisible(c : Pointer(Control)) : Bool
    fun control_show = uiControlShow(c : Pointer(Control))
    fun control_hide = uiControlHide(c : Pointer(Control))
    fun control_enabled = uiControlEnabled(c : Pointer(Control)) : Bool
    fun control_enable = uiControlEnable(c : Pointer(Control))
    fun control_disable = uiControlDisable(c : Pointer(Control))
    fun alloc_control = uiAllocControl(n : LibC::SizeT, o_ssig : LibC::Int, typesig : LibC::Int, typenamestr : Pointer(LibC::Char)) : Pointer(Control)
    fun free_control = uiFreeControl(c : Pointer(Control))
    fun control_verify_set_parent = uiControlVerifySetParent(c : Pointer(Control), parent : Pointer(Control))
    fun control_enabled_to_user = uiControlEnabledToUser(c : Pointer(Control)) : Bool
    fun user_bug_cannot_set_parent_on_toplevel = uiUserBugCannotSetParentOnToplevel(type : Pointer(LibC::Char))
    alias Window = Void
    fun window_title = uiWindowTitle(w : Pointer(Window)) : Pointer(LibC::Char)
    fun window_set_title = uiWindowSetTitle(w : Pointer(Window), title : Pointer(LibC::Char))
    fun window_position = uiWindowPosition(w : Pointer(Window), x : Pointer(LibC::Int), y : Pointer(LibC::Int))
    fun window_set_position = uiWindowSetPosition(w : Pointer(Window), x : LibC::Int, y : LibC::Int)
    fun window_on_position_changed = uiWindowOnPositionChanged(w : Pointer(Window), f : (Pointer(Window), Pointer(Void) -> Void), data : Pointer(Void))
    fun window_content_size = uiWindowContentSize(w : Pointer(Window), width : Pointer(LibC::Int), height : Pointer(LibC::Int))
    fun window_set_content_size = uiWindowSetContentSize(w : Pointer(Window), width : LibC::Int, height : LibC::Int)
    fun window_fullscreen = uiWindowFullscreen(w : Pointer(Window)) : Bool
    fun window_set_fullscreen = uiWindowSetFullscreen(w : Pointer(Window), fullscreen : Bool)
    fun window_on_content_size_changed = uiWindowOnContentSizeChanged(w : Pointer(Window), f : (Pointer(Window), Pointer(Void) -> Void), data : Pointer(Void))
    fun window_on_closing = uiWindowOnClosing(w : Pointer(Window), f : (Pointer(Window), Pointer(Void) -> Bool), data : Pointer(Void))
    fun window_on_focus_changed = uiWindowOnFocusChanged(w : Pointer(Window), f : (Pointer(Window), Pointer(Void) -> Void), data : Pointer(Void))
    fun window_focused = uiWindowFocused(w : Pointer(Window)) : Bool
    fun window_borderless = uiWindowBorderless(w : Pointer(Window)) : Bool
    fun window_set_borderless = uiWindowSetBorderless(w : Pointer(Window), borderless : Bool)
    fun window_set_child = uiWindowSetChild(w : Pointer(Window), child : Pointer(Control))
    fun window_margined = uiWindowMargined(w : Pointer(Window)) : Bool
    fun window_set_margined = uiWindowSetMargined(w : Pointer(Window), margined : Bool)
    fun window_resizeable = uiWindowResizeable(w : Pointer(Window)) : Bool
    fun window_set_resizeable = uiWindowSetResizeable(w : Pointer(Window), resizeable : Bool)
    fun new_window = uiNewWindow(title : Pointer(LibC::Char), width : LibC::Int, height : LibC::Int, has_menubar : Bool) : Pointer(Window)
    alias Button = Void
    fun button_text = uiButtonText(b : Pointer(Button)) : Pointer(LibC::Char)
    fun button_set_text = uiButtonSetText(b : Pointer(Button), text : Pointer(LibC::Char))
    fun button_on_clicked = uiButtonOnClicked(b : Pointer(Button), f : (Pointer(Button), Pointer(Void) -> Void), data : Pointer(Void))
    fun new_button = uiNewButton(text : Pointer(LibC::Char)) : Pointer(Button)
    alias Box = Void
    fun box_append = uiBoxAppend(b : Pointer(Box), child : Pointer(Control), stretchy : LibC::Int)
    fun box_num_children = uiBoxNumChildren(b : Pointer(Box)) : LibC::Int
    fun box_delete = uiBoxDelete(b : Pointer(Box), index : LibC::Int)
    fun box_padded = uiBoxPadded(b : Pointer(Box)) : Bool
    fun box_set_padded = uiBoxSetPadded(b : Pointer(Box), padded : Bool)
    fun new_horizontal_box = uiNewHorizontalBox : Pointer(Box)
    fun new_vertical_box = uiNewVerticalBox : Pointer(Box)
    alias Checkbox = Void
    fun checkbox_text = uiCheckboxText(c : Pointer(Checkbox)) : Pointer(LibC::Char)
    fun checkbox_set_text = uiCheckboxSetText(c : Pointer(Checkbox), text : Pointer(LibC::Char))
    fun checkbox_on_toggled = uiCheckboxOnToggled(c : Pointer(Checkbox), f : (Pointer(Checkbox), Pointer(Void) -> Void), data : Pointer(Void))
    fun checkbox_checked = uiCheckboxChecked(c : Pointer(Checkbox)) : Bool
    fun checkbox_set_checked = uiCheckboxSetChecked(c : Pointer(Checkbox), checked : Bool)
    fun new_checkbox = uiNewCheckbox(text : Pointer(LibC::Char)) : Pointer(Checkbox)
    alias Entry = Void
    fun entry_text = uiEntryText(e : Pointer(Entry)) : Pointer(LibC::Char)
    fun entry_set_text = uiEntrySetText(e : Pointer(Entry), text : Pointer(LibC::Char))
    fun entry_on_changed = uiEntryOnChanged(e : Pointer(Entry), f : (Pointer(Entry), Pointer(Void) -> Void), data : Pointer(Void))
    fun entry_read_only = uiEntryReadOnly(e : Pointer(Entry)) : Bool
    fun entry_set_read_only = uiEntrySetReadOnly(e : Pointer(Entry), readonly : Bool)
    fun new_entry = uiNewEntry : Pointer(Entry)
    fun new_password_entry = uiNewPasswordEntry : Pointer(Entry)
    fun new_search_entry = uiNewSearchEntry : Pointer(Entry)
    alias Label = Void
    fun label_text = uiLabelText(l : Pointer(Label)) : Pointer(LibC::Char)
    fun label_set_text = uiLabelSetText(l : Pointer(Label), text : Pointer(LibC::Char))
    fun new_label = uiNewLabel(text : Pointer(LibC::Char)) : Pointer(Label)
    alias Tab = Void
    fun tab_append = uiTabAppend(t : Pointer(Tab), name : Pointer(LibC::Char), c : Pointer(Control))
    fun tab_insert_at = uiTabInsertAt(t : Pointer(Tab), name : Pointer(LibC::Char), index : LibC::Int, c : Pointer(Control))
    fun tab_delete = uiTabDelete(t : Pointer(Tab), index : LibC::Int)
    fun tab_num_pages = uiTabNumPages(t : Pointer(Tab)) : LibC::Int
    fun tab_margined = uiTabMargined(t : Pointer(Tab), index : LibC::Int) : Bool
    fun tab_set_margined = uiTabSetMargined(t : Pointer(Tab), index : LibC::Int, margined : Bool)
    fun tab_selected = uiTabSelected(t : Pointer(Tab)) : LibC::Int
    fun tab_set_selected = uiTabSetSelected(t : Pointer(Tab), index : LibC::Int)
    fun tab_on_selected = uiTabOnSelected(t : Pointer(Tab), f : (Pointer(Tab), Pointer(Void) -> Void), data : Pointer(Void))
    fun new_tab = uiNewTab : Pointer(Tab)
    alias Group = Void
    fun group_title = uiGroupTitle(g : Pointer(Group)) : Pointer(LibC::Char)
    fun group_set_title = uiGroupSetTitle(g : Pointer(Group), title : Pointer(LibC::Char))
    fun group_set_child = uiGroupSetChild(g : Pointer(Group), c : Pointer(Control))
    fun group_margined = uiGroupMargined(g : Pointer(Group)) : Bool
    fun group_set_margined = uiGroupSetMargined(g : Pointer(Group), margined : Bool)
    fun new_group = uiNewGroup(title : Pointer(LibC::Char)) : Pointer(Group)
    alias Spinbox = Void
    fun spinbox_value = uiSpinboxValue(s : Pointer(Spinbox)) : LibC::Int
    fun spinbox_set_value = uiSpinboxSetValue(s : Pointer(Spinbox), value : LibC::Int)
    fun spinbox_on_changed = uiSpinboxOnChanged(s : Pointer(Spinbox), f : (Pointer(Spinbox), Pointer(Void) -> Void), data : Pointer(Void))
    fun new_spinbox = uiNewSpinbox(min : LibC::Int, max : LibC::Int) : Pointer(Spinbox)
    alias Slider = Void
    fun slider_value = uiSliderValue(s : Pointer(Slider)) : LibC::Int
    fun slider_set_value = uiSliderSetValue(s : Pointer(Slider), value : LibC::Int)
    fun slider_has_tool_tip = uiSliderHasToolTip(s : Pointer(Slider)) : Bool
    fun slider_set_has_tool_tip = uiSliderSetHasToolTip(s : Pointer(Slider), has_tool_tip : Bool)
    fun slider_on_changed = uiSliderOnChanged(s : Pointer(Slider), f : (Pointer(Slider), Pointer(Void) -> Void), data : Pointer(Void))
    fun slider_on_released = uiSliderOnReleased(s : Pointer(Slider), f : (Pointer(Slider), Pointer(Void) -> Void), data : Pointer(Void))
    fun slider_set_range = uiSliderSetRange(s : Pointer(Slider), min : LibC::Int, max : LibC::Int)
    fun new_slider = uiNewSlider(min : LibC::Int, max : LibC::Int) : Pointer(Slider)
    alias ProgressBar = Void
    fun progress_bar_value = uiProgressBarValue(p : Pointer(ProgressBar)) : LibC::Int
    fun progress_bar_set_value = uiProgressBarSetValue(p : Pointer(ProgressBar), n : LibC::Int)
    fun new_progress_bar = uiNewProgressBar : Pointer(ProgressBar)
    alias Separator = Void
    fun new_horizontal_separator = uiNewHorizontalSeparator : Pointer(Separator)
    fun new_vertical_separator = uiNewVerticalSeparator : Pointer(Separator)
    alias Combobox = Void
    fun combobox_append = uiComboboxAppend(c : Pointer(Combobox), text : Pointer(LibC::Char))
    fun combobox_insert_at = uiComboboxInsertAt(c : Pointer(Combobox), index : LibC::Int, text : Pointer(LibC::Char))
    fun combobox_delete = uiComboboxDelete(c : Pointer(Combobox), index : LibC::Int)
    fun combobox_clear = uiComboboxClear(c : Pointer(Combobox))
    fun combobox_num_items = uiComboboxNumItems(c : Pointer(Combobox)) : LibC::Int
    fun combobox_selected = uiComboboxSelected(c : Pointer(Combobox)) : LibC::Int
    fun combobox_set_selected = uiComboboxSetSelected(c : Pointer(Combobox), index : LibC::Int)
    fun combobox_on_selected = uiComboboxOnSelected(c : Pointer(Combobox), f : (Pointer(Combobox), Pointer(Void) -> Void), data : Pointer(Void))
    fun new_combobox = uiNewCombobox : Pointer(Void)
    alias EditableCombobox = Void
    fun editable_combobox_append = uiEditableComboboxAppend(c : Pointer(EditableCombobox), text : Pointer(LibC::Char))
    fun editable_combobox_text = uiEditableComboboxText(c : Pointer(EditableCombobox)) : Pointer(LibC::Char)
    fun editable_combobox_set_text = uiEditableComboboxSetText(c : Pointer(EditableCombobox), text : Pointer(LibC::Char))
    fun editable_combobox_on_changed = uiEditableComboboxOnChanged(c : Pointer(EditableCombobox), f : (Pointer(EditableCombobox), Pointer(Void) -> Void), data : Pointer(Void))
    fun new_editable_combobox = uiNewEditableCombobox : Pointer(EditableCombobox)
    alias RadioButtons = Void
    fun radio_buttons_append = uiRadioButtonsAppend(r : Pointer(RadioButtons), text : Pointer(LibC::Char))
    fun radio_buttons_selected = uiRadioButtonsSelected(r : Pointer(RadioButtons)) : LibC::Int
    fun radio_buttons_set_selected = uiRadioButtonsSetSelected(r : Pointer(RadioButtons), index : LibC::Int)
    fun radio_buttons_on_selected = uiRadioButtonsOnSelected(r : Pointer(RadioButtons), f : (Pointer(RadioButtons), Pointer(Void) -> Void), data : Pointer(Void))
    fun new_radio_buttons = uiNewRadioButtons : Pointer(Void)
    alias DateTimePicker = Void
    fun date_time_picker_time = uiDateTimePickerTime(d : Pointer(DateTimePicker), time : Pointer(Tm))
    alias Tm = Void
